--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
             if (!sun) {
                 const sunGeometry = new THREE.SphereGeometry(10, 32, 32);
                 const sunMaterial = new THREE.MeshStandardMaterial({
-                    color: 0xffff00,
-                    emissive: 0xffff00,
+                    color: 0x8B0000,
+                    emissive: 0x8B0000,
                     emissiveIntensity: 3.5
                 });
                 sun = new THREE.Mesh(sunGeometry, sunMaterial);
